Adding JDK profile and Parent dependencies refactored